Properly treat cross-stage type variables in typed quotes
POC

Fix bad rebase

Fix runtime rep args

Fix nested splices

Add qTypecheck to convert from untyped to typed repr

This is totally broken ATM because I crippled the untyped
representation.

Progress adding back untyped TH

Move Lift into it's own module and use typecheck rather than
unsafeCoerce

Fix untyped lifting

WOrk around staging issues

Fix CSP

Get kind correct

Some fixes

some fixes

Fix LiftString

--- a/compiler/ghc.cabal.in
+++ b/compiler/ghc.cabal.in
@@ -522,6 +522,7 @@ Library
         GHC.Core.Class
         GHC.Core.Coercion
         GHC.HsToCore.Quote
+        GHC.HsToCore.DsMetaTc
         THNames
         GHC.Core.FamInstEnv
         FunDeps
