--- a/libraries/template-haskell/template-haskell.cabal.in
+++ b/libraries/template-haskell/template-haskell.cabal.in
@@ -43,6 +43,7 @@ Library
     exposed-modules:
         Language.Haskell.TH
         Language.Haskell.TH.Lib
+        Language.Haskell.TH.Lift
         Language.Haskell.TH.Ppr
         Language.Haskell.TH.PprLib
         Language.Haskell.TH.Quote
